logs/tracking/build.make.682.log.stderr
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp: In member function ‘void DepthFilter::updateFilter(Eigen::Matrix4f, Eigen::Matrix<float, 2, -1>, Eigen::Matrix<float, 2, -1>)’:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:93:25: error: ‘class boost::shared_ptr<Eigen::Matrix<float, 4, -1> >’ has no member named ‘cols’
  for (int i=0; i<filter.cols(); i++) {
                         ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:96:18: error: ‘class boost::shared_ptr<Eigen::Matrix<float, 4, -1> >’ has no member named ‘cols’
   if (i==(filter.cols()-1))
                  ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:106:33: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float s2 = 1.0/(1.0/filter(3,i) + 1.0/(tau2));
                                 ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:107:27: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float m = s2*(filter(2,i)/filter(3,i) + x/(tau2));
                           ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:107:39: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float m = s2*(filter(2,i)/filter(3,i) + x/(tau2));
                                       ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:109:27: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   int num_obs = filter(0,i)+filter(1,i);
                           ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:109:39: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   int num_obs = filter(0,i)+filter(1,i);
                                       ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:110:46: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float gaussian_scale = sqrt(tau2+filter(3,i));
                                              ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:111:24: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float C1 = filter(0,i)/num_obs*normal_pdf(x,filter(2,i),gaussian_scale);
                        ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:111:57: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float C1 = filter(0,i)/num_obs*normal_pdf(x,filter(2,i),gaussian_scale);
                                                         ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:112:24: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float C2 = filter(1,i)/(num_obs*depth_range);
                        ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:114:37: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float u_new = C1*m + C2*filter(2,i);
                                     ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:115:47: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float var_new = C1*(s2+m*m) + C2*(filter(3,i)+filter(2,i)*filter(2,i)) - u_new*u_new;
                                               ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:115:59: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float var_new = C1*(s2+m*m) + C2*(filter(3,i)+filter(2,i)*filter(2,i)) - u_new*u_new;
                                                           ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:115:71: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float var_new = C1*(s2+m*m) + C2*(filter(3,i)+filter(2,i)*filter(2,i)) - u_new*u_new;
                                                                       ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:117:27: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float p = C1*(filter(0,i)+1.0f)*(filter(0,i)+2.0f)/((num_obs+1.0f)*(num_obs+2.0f));
                           ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:117:46: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float p = C1*(filter(0,i)+1.0f)*(filter(0,i)+2.0f)/((num_obs+1.0f)*(num_obs+2.0f));
                                              ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:118:26: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float q = C2*filter(0,i)*(filter(0,i)+1.0f)/((num_obs+1.0f)*(num_obs+2.0f));
                          ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:118:39: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float q = C2*filter(0,i)*(filter(0,i)+1.0f)/((num_obs+1.0f)*(num_obs+2.0f));
                                       ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:121:50: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   float temp = (num_obs+1.0f)/((C1+C2)*filter(0,i)+C1) -1.0f;
                                                  ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:128:13: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   filter(0,i) = a_new;
             ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:129:13: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   filter(1,i) = b_new;
             ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:130:13: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   filter(2,i) = u_new;
             ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:131:13: error: no match for call to ‘(boost::shared_ptr<Eigen::Matrix<float, 4, -1> >) (int, int&)’
   filter(3,i) = var_new;
             ^
make[2]: *** [CMakeFiles/tracking.dir/src/DepthFilter.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:20:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
